--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Flying Easy Animation -->
+    <div id="flying-easy" class="flying-easy">
+        <img src="easy fly .png" alt="Flying Easy">
+    </div>
+    
     <div class="container">
         <header>
             <h1>30-Day Portfolio Challenge</h1>
